tests/snapshots/examples_fixtures/type_system__failing__87_hm_pattern_binding_constrained_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `x` does not match its type annotation.

  examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:2:21
  |
2 |     let x: String = match Some(1) {
  |                     ^^^^^^^^^^^^^^^
  |            ------ but `x` was annotated as `String`
3 |         Some(v) -> v,
  | ^^^^^^^^^^^^^^^^^^^^^
4 |         None -> 0,
  | ^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Note:
  annotated type: String
  value type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.


error[E300]: Return Type Mismatch

The body of `main` does not match its declared return type.

  examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:6:5
  |
1 | fn main() -> Unit {
  |              ---- `main` was declared to return `Unit`
2 |     let x: String = match Some(1) {
3 |         Some(v) -> v,
4 |         None -> 0,
5 |     }
6 |     x
  |     ^
  |     - this expression has type `String`

Note:
  declared return type: Unit
  body type: String

Help:
  Return a `Unit` value from `main` or change its annotation.

Found 2 errors.
== stdout ==
<not executed>
